register turn of user control player

--- a/.jshintrc
+++ b/.jshintrc
@@ -32,7 +32,6 @@
     "browser": true,
     "mocha": true,
     "globals": {
-        "io": false,
-        "expect": false
+        "_": false
     }
 }
