--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/fernandoPalaciosGit/ia-tictactoe-game",
   "devDependencies": {
+    "eslint-tap": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.3",
+    "grunt-eslint": "^17.2.0",
     "grunt-jscs": "^2.1.0",
     "grunt-sass": "^1.1.0-beta",
     "time-grunt": "^1.2.1"
